# monitordepreco

./: .cooldowns.json  .env.example  .gitignore  README.md  config.json  price_history.json  pyproject.toml
.github/workflows/: deploy-pages.yml  monitor.yml
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: app.js  charts.js  config.js  products.js
src/monitor/: __main__.py  config.py  history.py  notifier.py  scraper.py  stealth.py
src/monitor/parsers/: __init__.py  amazon.py  americanas.py  base.py  kabum.py  livelo.py  magazineluiza.py  mercadolivre.py  pichau.py  shopee.py  terabyte.py
src/monitor/utils/: get_chat_id.py  price.py
