[project]
name = "monitor-de-preco"
version = "1.0.0"
description = "Automated price monitor for Brazilian hardware stores"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3",
    "python-telegram-bot>=21.0",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "fake-useragent>=1.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
